fix images on mobile screen

--- a/src/base.css
+++ b/src/base.css
@@ -10,7 +10,7 @@ a {
 }
 
 img {
-    max-width: 100%;
+    width: 100%;
 }
 
 body {
